--- a/Haystack Framework.ipynb
+++ b/Haystack Framework.ipynb
@@ -383,7 +383,7 @@
         "    output_parser=AnswerParser(),\n",
         ")\n",
         "\n",
-        "prompt_node = PromptNode(model_name_or_path=\"gpt-3.5-turbo\", api_key=\"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\", default_prompt_template=rag_prompt)\n"
+        "prompt_node = PromptNode(model_name_or_path=\"gpt-3.5-turbo\", api_key=\"api_key\", default_prompt_template=rag_prompt)\n"
       ],
       "metadata": {
         "id": "bg1ozlnIWDET"
